--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 :root {
-  --teal: #11A584
+  --teal: #11A584;
+  --teal-dark: #109A7C;
+  --teal-light: #14BB97;
 }
 
 .App {
@@ -20,6 +22,25 @@ header, footer {
 footer {
   justify-self: end;
 }
+
+button, .button {
+  background-color: var(--teal);
+  padding: 0.5em 1em;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 1px 1px 3px black;
+  color: white
+}
+
+button:hover, .button:hover {
+  background-color: var(--teal-dark);
+}
+button:active, .button:active {
+  background-color: var(--teal-light);
+  box-shadow: 0 0 2px black;
+
+}
+
 
 .nav-button {
   color: white;
@@ -47,7 +68,7 @@ footer {
   cursor: pointer;
   display: flex;
   justify-content: space-between;
-  border: 1px solid whitesmoke;
+  border: 1px solid var(--teal-light);
   border-radius: 1em;
   padding: 0.5em 2em;
   margin: 0.5em 1em;
@@ -84,8 +105,14 @@ footer {
   align-items: center;
   width: 100%;
   height: 2em;
-  border-bottom: 1px solid whitesmoke;
+  border-bottom: 1px solid var(--teal-light);
+  background-color: var(--teal-light);
+  color: white;
+  font-weight: bold;
   cursor: pointer;
+}
+div .active {
+  background-color: var(--teal-dark);
 }
 
 .GroupSearch {
@@ -106,6 +133,7 @@ footer {
 
 .group-info {
   text-align: left;
+  padding: 0.5em 1em;
 }
 
 .Participants {
